--- a/app/assets/translations/en.json
+++ b/app/assets/translations/en.json
@@ -1,8 +1,8 @@
 {
   "application": {
     "select_item": "Please select an item to delete.",
-    "confirm_delete": "Are you sure you want to permanently merge or delete this item?",
-    "confirm_delete_plural": "Are you sure you want to permanently merge or delete these __count__ items?"
+    "confirm_delete": "Are you sure you want to permanently delete this item?",
+    "confirm_delete_plural": "Are you sure you want to permanently delete these __count__ items?"
   },
   "specific": {
     "contributorships": {
